# SimpleGUI

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  main.cpp
